testsuite/tests/misc/auto_provider/test.out
Analyzing foo.adb
#################

WARNING: File bar.ads not found
Resolving xrefs for node <ObjectDecl ["I"] foo.adb:5:4-5:47>
************************************************************

Expr: <Id "Integer" foo.adb:5:17-5:24>
  references:    <DefiningName "Integer" in Standard>
  type:          None
  expected type: None
Expr: <CallExpr foo.adb:5:28-5:46>
  references:    <DefiningName "Fact" src2.ada:2:13-2:17>
  type:          <SubtypeDecl ["Natural"] in Standard>
  expected type: <ConcreteTypeDecl ["Integer"] in Standard>
Expr: <DottedName foo.adb:5:28-5:42>
  references:    <DefiningName "Fact" src2.ada:2:13-2:17>
  type:          <SubtypeDecl ["Natural"] in Standard>
  expected type: None
Expr: <DottedName foo.adb:5:28-5:37>
  references:    <DefiningName "Pkg.Child" src2.ada:1:9-1:18>
  type:          None
  expected type: None
Expr: <Id "Pkg" foo.adb:5:28-5:31>
  references:    <DefiningName "Pkg" src1.ada:1:9-1:12>
  type:          None
  expected type: None
Expr: <Id "Child" foo.adb:5:32-5:37>
  references:    <DefiningName "Pkg.Child" src2.ada:1:9-1:18>
  type:          None
  expected type: None
Expr: <Id "Fact" foo.adb:5:38-5:42>
  references:    <DefiningName "Fact" src2.ada:2:13-2:17>
  type:          <SubtypeDecl ["Natural"] in Standard>
  expected type: None
Expr: <Int foo.adb:5:44-5:45>
  references:    None
  type:          <ConcreteTypeDecl ["Universal_Int_Type_"] in Standard>
  expected type: <SubtypeDecl ["Natural"] in Standard>

Resolving xrefs for node <CallStmt foo.adb:8:4-8:8>
***************************************************

foo.adb:8:4: error: no such entity
8 |    Bar;
  |    ^^^


Expected name resolution failure for node <CallStmt foo.adb:8:4-8:8>


Done.
